// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VocabLevel /> should adopt props 1`] = `
<styled.li
  isActionable={true}
>
  <Styled(A)
    plainLink={true}
    to="/vocabulary/level/12"
  >
    <Styled(styled.h2)>
      Level 
      12
    </Styled(styled.h2)>
    <styled.span>
       
      126
       entries
    </styled.span>
  </Styled(A)>
  <Styled(LockButton)
    isActionable={true}
    isLocked={false}
    title="Lock level 12"
  />
</styled.li>
`;

exports[`<VocabLevel /> should match baseline snapshot 1`] = `
<styled.li
  isActionable={false}
>
  <Styled(A)
    plainLink={true}
    to="/vocabulary/level/12"
  >
    <Styled(styled.h2)>
      Level 
      12
    </Styled(styled.h2)>
    <styled.span>
      Locked
    </styled.span>
  </Styled(A)>
  <Styled(LockButton)
    isActionable={false}
    isLocked={true}
    title="Unlock level 12"
  />
</styled.li>
`;
